Update navigation links in safe-analytics.html
Replaced multiple relative links with a single absolute link pointing to https://decentri.fi. This simplifies navigation and ensures consistent access to the Home page.

--- a/data-api/src/main/resources/templates/safe-analytics.html
+++ b/data-api/src/main/resources/templates/safe-analytics.html
@@ -828,11 +828,7 @@
                 </button>
                 <nav>
                     <ul class="nav-links" id="nav-links">
-                        <li><a href="../../../../../landing/index.html">Home</a></li>
-                        <li><a href="#analytics">Analytics</a></li>
-                        <li><a href="#docs">Docs</a></li>
-                        <li><a href="#pricing">Pricing</a></li>
-                        <li><a href="#login">Login</a></li>
+                        <li><a href="https://decentri.fi">Home</a></li>
                     </ul>
                 </nav>
             </div>
